--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
     .font-inter {
       font-family: 'Inter', sans-serif;
     }
+    .font-Noto-Serif {
+      font-family: 'Noto Serif', serif;
+    }
   </style>
 </head>
 
-<body class="font-inter">
+<body>
 
   <header class="max-w-[400px] mx-auto md:max-w-7xl md:mx-auto">
     <div class="w-full flex justify-between md:hidden">
@@ -45,6 +48,27 @@
       </div>
 
     </nav>
+    <!-- Hero Section -->
+  <div class="flex flex-col-reverse md:flex-row md:mt-[120px] md:justify-between md:items-center">
+    <!-- Text -->
+    <div class="md:items-center">
+      <h2 class="font-Noto-Serif text-[24px] mt-7 md:text-[65px] font-bold">
+        ALWAYS <span class="text-[#E95A08]">FRESH</span> <br>
+        <span class="text-[#E95A08]">FLOWERS</span>
+      </h2>
+      <p class="font-inter text-[14px] md:text-[22px] text-[#000000] mt-4 font-normal">
+        Indulge your senses with the beauty and fragrance of <br>
+        our fresh flower shop. From classic roses to exotic <br>
+        blooms, we offer a wide variety of fresh flowers that <br>
+        are perfect for any occasion
+      </p>
+    </div>
+  
+    <!-- Image -->
+    <div class="md:items-center md:mr-20">
+      <img src="assets/hero-flower.png" alt="">
+    </div>
+  </div>
   </header>
 
 </body>
