Completing Our plants for both mobile and dekstop

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   </style>
 </head>
 
-<body>
+<body class="max-w-[400px] mx-auto md:max-w-7xl md:mx-auto">
 
-  <header class="max-w-[400px] mx-auto md:max-w-7xl md:mx-auto">
+  <header>
     <div class="w-full flex justify-between md:hidden">
       <div class="mt-10 items-center ml-14  text-[28px] font-bold">
         9:41
@@ -70,6 +70,66 @@
     </div>
   </div>
   </header>
+
+  <main class="mt-[120px]">
+    <section>
+      <div class=" flex flex-col items-center justify-center">
+        <h2 class="font-Noto-Serif text-[50px] font-bold"><span class="text-[#E95A08]">Our</span> Plants</h2>
+        <p class="font-inter text-[14px] md:text-[22px] font-medium">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we
+        offer a wide variety of fresh.</p>
+      </div>
+      <div class="mt-12 grid grid-cols-2 md:grid md:grid-cols-4 gap-4">
+        <div class="flex flex-col ">
+          <img src="assets/sample-flower-image.png" alt="">
+          <h2 class="text-center mt-6 font-inter font-medium md:text-[22px] text-[14px]">Lily Blossom</h2>
+          <h2 class="text-center mt-2 font-inter font-bold md:text-[22px] text-[14px]">20 USD</h2>
+          <button class="mt-4 py-4 font-inter text-[16] text-center font-semibold text-white bg-[#E95A08]">ADD TO CART</button>
+        </div>
+        <div class=" flex flex-col">
+          <img src="assets/sample-flower-image.png" alt="">
+          <h2 class="text-center mt-6 font-inter font-medium md:text-[22px] text-[14px]">Lily Blossom</h2>
+          <h2 class="text-center mt-2 font-inter font-bold md:text-[22px] text-[14px]">20 USD</h2>
+          <button class="mt-4 py-4 font-inter text-[16] text-center font-semibold text-white bg-[#E95A08]">ADD TO CART</button>
+        </div>
+        <div class="flex flex-col ">
+          <img src="assets/sample-flower-image.png" alt="">
+          <h2 class="text-center mt-6 font-inter font-medium md:text-[22px] text-[14px]">Lily Blossom</h2>
+          <h2 class="text-center mt-2 font-inter font-bold md:text-[22px] text-[14px]">20 USD</h2>
+          <button class="mt-4 py-4 font-inter text-[16] text-center font-semibold text-white bg-[#E95A08]">ADD TO CART</button>
+        </div>
+        <div class="flex flex-col">
+          <img src="assets/sample-flower-image.png" alt="">
+          <h2 class="text-center mt-6 font-inter font-medium md:text-[22px] text-[14px]">Lily Blossom</h2>
+          <h2 class="text-center mt-2 font-inter font-bold md:text-[22px] text-[14px]">20 USD</h2>
+          <button class="mt-4 py-4 font-inter text-[16] text-center font-semibold text-white bg-[#E95A08]">ADD TO CART</button>
+        </div>
+        <div class="flex flex-col">
+          <img src="assets/sample-flower-image.png" alt="">
+          <h2 class="text-center mt-6 font-inter font-medium md:text-[22px] text-[14px]">Lily Blossom</h2>
+          <h2 class="text-center mt-2 font-inter font-bold md:text-[22px] text-[14px]">20 USD</h2>
+          <button class="mt-4 py-4 font-inter text-[16] text-center font-semibold text-white bg-[#E95A08]">ADD TO CART</button>
+        </div>
+        <div class="flex flex-col ">
+          <img src="assets/sample-flower-image.png" alt="">
+          <h2 class="text-center mt-6 font-inter font-medium md:text-[22px] text-[14px]">Lily Blossom</h2>
+          <h2 class="text-center mt-2 font-inter font-bold md:text-[22px] text-[14px]">20 USD</h2>
+          <button class="mt-4 py-4 font-inter text-[16] text-center font-semibold text-white bg-[#E95A08]">ADD TO CART</button>
+        </div>
+        <div class="flex flex-col  ">
+          <img src="assets/sample-flower-image.png" alt="">
+          <h2 class="text-center mt-6 font-inter font-medium md:text-[22px] text-[14px]">Lily Blossom</h2>
+          <h2 class="text-center mt-2 font-inter font-bold md:text-[22px] text-[14px]">20 USD</h2>
+          <button class="mt-4 py-4 font-inter text-[16] text-center font-semibold text-white bg-[#E95A08]">ADD TO CART</button>
+        </div>
+        <div class="flex flex-col ">
+          <img src="assets/sample-flower-image.png" alt="">
+          <h2 class="text-center mt-6 font-inter font-medium md:text-[22px] text-[14px]">Lily Blossom</h2>
+          <h2 class="text-center mt-2 font-inter font-bold md:text-[22px] text-[14px]">20 USD</h2>
+          <button class="mt-4 py-4 font-inter text-[16] text-center font-semibold text-white bg-[#E95A08]">ADD TO CART</button>
+        </div>
+      </div>
+    </section>
+  </main>
 
 </body>
 
