--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
   </header>
 
   <main class="mt-[120px]">
+    <!--Our Plants Part Section-->
     <section>
       <div class=" flex flex-col items-center justify-center">
         <h2 class="font-Noto-Serif text-[50px] font-bold"><span class="text-[#E95A08]">Our</span> Plants</h2>
@@ -129,6 +130,42 @@
         </div>
       </div>
     </section>
+
+    <!--Flower And Plants Lover-->
+
+<section class="md:mt-[210px] mt-[100px]">
+  <div class="md:flex md:gap-[190px]">
+    <!-- Image Container -->
+    <div class="relative">
+      <img src="assets/flower-store.png" alt="">
+      <img class="hidden md:block md:absolute md:-top-[140px] md:right-[-90px] md:w-1/2 md:h-1/2"
+        src="assets/trusted-badge.png" alt="">
+    </div>
+
+
+    <!-- Text Section -->
+    <div class="ml-8">
+      <h2 class="font-Noto-Serif text-[20px] mt-4 md:text-[50px] font-bold">
+        FLOWER & PLANTS <br> LOVER
+      </h2>
+      <ul class="list-disc list-inside mt-4 font-inter text-[14px] md:text-[22px] ">
+        <li>Indulge your senses with the beauty and <br> fragrance of our fresh flower shop. From classic <br> roses to exotic blooms, we
+          offer a wide variety <br> of fresh.</li>
+        <li>Indulge your senses with the beauty and <br> fragrance of our fresh flower shop. From classic <br> roses to exotic
+          blooms, we
+          offer a wide variety <br> of fresh.
+        </li>
+        <li>Indulge your senses with the beauty and <br> fragrance of our fresh flower shop. From classic <br> roses to exotic
+          blooms, we
+          offer a wide variety <br> of fresh.
+        </li>
+      </ul>
+    </div>
+  </div>
+</section>
+
+
+
   </main>
 
 </body>
