--- a/index.html
+++ b/index.html
@@ -164,6 +164,53 @@
   </div>
 </section>
 
+ <!--Latest  Deals -->
+
+<section class="md:mt-[130px] px-4 md:px-0">
+
+  <div class="flex flex-col items-center text-center">
+    <h2 class="font-Noto-Serif text-[24px] md:text-[50px] font-bold mt-4">
+      <span class="text-[#E95A08]">Latest</span> Deals
+    </h2>
+    <p class="font-inter text-[14px] md:text-[22px] font-medium mt-2 md:mt-4">
+      Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br>
+      classic roses to exotic blooms, we offer a wide variety of fresh.
+    </p>
+  </div>
+
+  <div class="md:flex md:gap-4 mt-8">
+
+    <div class="flex flex-col md:gap-4 md:w-1/2">
+      <div
+        class="w-full h-64 rounded-2xl bg-[url('assets/deal-bloom.png')] bg-no-repeat bg-cover flex justify-center items-center text-center px-4">
+        <div>
+          <p class="font-Noto-Serif text-[20px] font-bold text-white">60% Off | Bloom Plant</p>
+          <p class="font-inter font-semibold text-[16px] text-white mt-1">Shop Now</p>
+        </div>
+      </div>
+      <div
+        class="w-full h-64 rounded-2xl bg-[url('assets/deal-ana.png')] bg-no-repeat bg-cover flex justify-center items-center text-center px-4 mt-4 md:mt-0">
+        <div>
+          <p class="font-Noto-Serif text-[20px] font-bold text-white">30% Off | Ana Plant</p>
+          <p class="font-inter font-semibold text-[16px] text-white mt-1">Shop Now</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="md:w-1/2 mt-4 md:mt-0">
+      <div
+        class="w-full h-[calc(16rem+16rem+1rem)] rounded-2xl bg-[url('assets/deal-zabo.png')] bg-no-repeat bg-cover flex justify-center items-center text-center px-4">
+        <div>
+          <p class="font-Noto-Serif text-[20px] font-bold text-white">25% Off | Zabo Plant</p>
+          <p class="font-inter font-semibold text-[16px] text-white mt-1">Shop Now</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
 
 
   </main>
