Complete the Join the Colourful Branch section for both mobile and dekstop

--- a/index.html
+++ b/index.html
@@ -209,6 +209,25 @@
   </div>
 </section>
 
+<!--Join the Colourful Branch-->
+
+<section class="mt-[100px] md:mt-[130px]">
+  <div class="bg-[url('assets/news-letter-bg.png')] bg-no-repeat bg-cover flex flex-col items-center justify-center 
+              h-[260px] md:h-[540px] px-4 md:w-7xl">
+    <h1 class="font-Noto-Serif font-bold text-[28px] md:text-[50px] text-white text-center">
+      Join the colorful Bunch
+    </h1>
+    <div class="relative mt-6 w-full max-w-md md:max-w-[644px]">
+      <input class="w-full py-3 px-4 text-sm md:py-2 md:px-4 md:text-base rounded" type="email"
+        placeholder="Write email">
+      <button
+        class="absolute right-0 top-0 md:top-0 text-[14px] md:text-[16px] font-semibold text-white bg-[#E95A08] px-5 md:px-8 py-2 rounded">
+        Subscribe
+      </button>
+    </div>
+
+  </div>
+</section>
 
 
 
