Completing footer section

--- a/index.html
+++ b/index.html
@@ -230,9 +230,45 @@
 </section>
 
 
-
-
   </main>
+
+<footer class="flex flex-col md:flex-row md:justify-between gap-8 md:gap-[80px] mt-[50px] px-4 md:px-0 max-w-7xl mx-auto">
+  <div class="flex flex-col items-start text-left">
+    <img src="assets/logo.png" alt="Logo" class="w-24 md:w-32"> 
+    <p class="mt-4 font-inter font-medium text-[14px] md:text-[22px] leading-relaxed">
+      Indulge your senses with the <br>
+      beauty and fragrance of our fresh <br>
+      flower shop.
+    </p>
+  </div>
+  <div class="flex flex-col md:flex-row gap-4 md:gap-12">
+    <div class="flex flex-col items-start gap-2 md:gap-4 text-sm md:text-base">
+      <button>Home</button>
+      <button>About Us</button>
+      <button>Blog</button>
+      <button>FAQ</button>
+      <button>Contact Us</button>
+    </div>
+    <div class="flex flex-col items-start gap-2 md:gap-4 text-sm md:text-base">
+      <button>Features</button>
+      <button>Pricing</button>
+      <button>Privacy Policy</button>
+      <button>Terms of Services</button>
+      <button>Help Center</button>
+    </div>
+  </div>
+
+  <div class="flex justify-start gap-2 md:gap-4 mt-4 md:mt-0">
+    <img src="assets/icon-linkedin.png" alt="LinkedIn" class="w-6 h-6 md:w-8 md:h-8">
+    <img src="assets/icon-twitter.png" alt="Twitter" class="w-6 h-6 md:w-8 md:h-8">
+    <img src="assets/icon-facebook.png" alt="Facebook" class="w-6 h-6 md:w-8 md:h-8">
+    <img src="assets/icon-youtube.png" alt="YouTube" class="w-6 h-6 md:w-8 md:h-8">
+  </div>
+
+</footer>
+
+
+
 
 </body>
 
